<resources>
    <string name="app_name">Own</string>
    <string name="appwidget_text">Photo Adder</string>
    <string name="add_widget">Add Photo Widget</string>
    <string name="app_widget_description">Add photos on the wallpaper</string>
    <string name="snake_widget_description">A retro autoplaying snake</string>
    <string name="water_desc">A tilt-sensitive water glass</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="hourglass_desc">A tilt-sensitive sand timer</string>
    <string name="coin_widget_desc">Tap to flip a coin</string>
    <string name="gear_widget_desc">A mechanical gear you can tap</string>
    <string name="widget_description">A tilt-sensitive maze game</string>
    <string name="maze_widget_desc">An 8-bit tilt maze you can play right on your home screen!</string>
    <string name="drawing_widget_description">Hand drawn sticky notes on your home screen</string>
    <string name="widget_gallery_button">Widgets</string>
    <string name="theme_toggle_desc">Toggle Dark/Light Mode</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_medium">Medium</string>
    <string name="diff_hard">Difficult</string>
    <string name="diff_title">Select Speed</string>
    <string name="game_pause">Pause</string>
    <string name="game_resume">Resume</string>
    <string name="tools_gallery_button">Tools</string>
    <string name="tools_gallery_title">Tools Collection</string>
    <string name="tools_gallery_subtitle">Utilities to customize your digital space.</string>
    <string name="whatsapp_sticker_title">WA Sticker Maker</string>
    <string name="pick_image">Select Photo</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
</resources>